Fixe overflow testimonial

--- a/assets/scss/_testimonial.scss
+++ b/assets/scss/_testimonial.scss
@@ -127,6 +127,7 @@
       }
     }
     &--content {
+      overflow-x: hidden;
       &--list {
         margin: 45px 121px 70px 150px;
         position: relative;
